--- a/.github/workflows/push_json_to_github.yml
+++ b/.github/workflows/push_json_to_github.yml
@@ -1,22 +1,32 @@
 name: Push JSON Files to GitHub
 
+# Déclenche l'action lorsqu'il y a un push dans la branche principale (ou master)
 on:
   push:
+    branches:
+      - main  # Changez cela si votre branche par défaut est autre que "main"
     paths:
       - "taches.json"
       - "planifications.json"
 
 jobs:
   push_to_github:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Utilisation d'une machine virtuelle Ubuntu
+
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Cloner le dépôt
 
-      - name: Commit and Push changes
+      - name: Set up Git
         run: |
-          git config user.name "Jrp-Rogue"
-          git config user.email "rhogini@gmail.com"
+          git config --global user.name "Jrp-Rogue"
+          git config --global user.email "rhogini@gmail.com"
+
+      - name: Add and Commit changes
+        run: |
           git add .
-          git commit -m "Update JSON files"
+          git commit -m "Update JSON files" || echo "No changes to commit"
+
+      - name: Push changes
+        run: |
           git push
