--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 matplotlib
 numpy
 gitpython
-git+https://$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}@github.com/Jrp-Rogue/TSKPRIO.git
-streamlit==1.15.0  # Assure-toi d'avoir la version que tu utilises
-pandas==1.3.3  # Exemple de version compatible
-gdown==4.4.0  # Si tu utilises gdown
-subprocess
+git+https://github.com/Jrp-Rogue/TSKPRIO.git  # Si le dépôt est public ou si tu gères l'authentification via SSH ou secret
+streamlit==1.15.0
+pandas==1.3.3
+gdown==4.4.0
