--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib
 numpy
 gitpython
-git+https://github.com/Jrp-Rogue/TSKPRIO.git#egg=TSKPRIO  # Si le dépôt est public ou si tu gères l'authentification via SSH ou secret
+git+https://github.com/Jrp-Rogue/TSKPRIO.git@main #egg=TSKPRIO   # Si le dépôt est public ou si tu gères l'authentification via SSH ou secret
 streamlit==1.15.0
 pandas==1.3.3
 gdown==4.4.0
