--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ matplotlib
 numpy
 gitpython
 git+https://github.com/Jrp-Rogue/TSKPRIO.git@ded1d5f18f98ab1eec042dc7361402ca83903eb2#egg=TSKPRIO
-streamlit==1.15.0
-pandas==1.3.3
-gdown==4.4.0
+streamlit
+pandas
+
