--- a/.github/workflows/push_json_to_github.yml
+++ b/.github/workflows/push_json_to_github.yml
@@ -9,34 +9,27 @@ on:
 jobs:
   push_to_git:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'  # Spécifie la version de Python que tu veux utiliser
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt  # Installe toutes les dépendances listées dans requirements.txt
 
       - name: Set up Git
         run: |
           git config --global user.name "Jrp-Rogue"
           git config --global user.email "rhogini@gmail.com"
 
+      - name: Install dependencies
+        run: |
+          cd TSKPRIO  # Navigue dans le sous-dossier
+          pip install .  # Installe le projet à partir de setup.py ou pyproject.toml
+
       - name: Add and commit changes
         run: |
-          git add data.json planifications.json  # Remplacer par les fichiers spécifiques
+          cd TSKPRIO  # Assure-toi d'être dans le sous-dossier
+          git add data.json planifications.json  # Remplace par tes fichiers spécifiques
           git commit -m "Update JSON files" || echo "No changes to commit"
 
       - name: Push changes to GitHub
         run: |
-          git push origin main  # Remplacer par la branche correcte si nécessaire
-
-      - name: Run Streamlit app
-        run: |
-          streamlit run TSKPRIO/app2.py  # Lancer ton application Streamlit
+          git push origin main  # Assure-toi que la branche est correcte
