--- a/.github/workflows/push_json_to_github.yml
+++ b/.github/workflows/push_json_to_github.yml
@@ -1,4 +1,8 @@
 name: Push JSON Files to GitHub
+- name: Add GitHub to known hosts
+  run: |
+    mkdir -p ~/.ssh
+    ssh-keyscan github.com >> ~/.ssh/known_hosts
 
 on:
   push:
