--- a/.github/workflows/push_json_to_github.yml
+++ b/.github/workflows/push_json_to_github.yml
@@ -13,12 +13,14 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
 
-      - name: Set up SSH key for GitHub
+      - name: Set up Git and add GitHub to known hosts
         run: |
+          git config --global user.name "Jrp-Rogue"  # Ton nom d'utilisateur GitHub
+          git config --global user.email "rhogini@gmail.com"  # Ton email GitHub
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/id_rsa  # Assure-toi que la clé privée a les bonnes permissions
+          ssh-keyscan github.com >> ~/.ssh/known_hosts  # Ajoute GitHub aux hôtes connus
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
