--- a/.github/workflows/push_json_to_github.yml
+++ b/.github/workflows/push_json_to_github.yml
@@ -15,23 +15,24 @@ jobs:
 
       - name: Set up Git and add GitHub to known hosts
         run: |
-          git config --global user.name "Jrp-Rogue"  # Ton nom d'utilisateur GitHub
-          git config --global user.email "rhogini@gmail.com"  # Ton email GitHub
+          git config --global user.name "Jrp-Rogue"
+          git config --global user.email "rhogini@gmail.com"
           mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Set up SSH key
+        run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa  # Assure-toi que la clé privée a les bonnes permissions
-          ssh-keyscan github.com >> ~/.ssh/known_hosts  # Ajoute GitHub aux hôtes connus
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Install dependencies
         run: |
-          cd TSKPRIO  # Se placer dans le sous-dossier contenant setup.py
+          cd TSKPRIO  # Assure-toi que ce chemin est correct
           pip install .
 
       - name: Add and commit changes
         run: |
-          cd TSKPRIO  # Se placer dans le sous-dossier contenant tes fichiers JSON
+          cd TSKPRIO  # Assure-toi que ce chemin est correct
           git add taches.json planifications.json
           git commit -m "Update JSON files" || echo "No changes to commit"
 
